--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,24 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# TypeScript
+*.tsbuildinfo
+
+# Build outputs
+build/
+out/
+
+# Vercel
+.vercel
+
+# Temporary files
+.tmp/
+temp/
