--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "postcss": "^8.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.43.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
