--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,5 +21,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["tailwind.config.js"]
+  "include": ["vite.config.ts", "tailwind.config.js"]
 }
